--- a/PyCitySchools/PyCitySchools_Roop.ipynb
+++ b/PyCitySchools/PyCitySchools_Roop.ipynb
@@ -7,7 +7,19 @@
    "source": [
     "# PyCity Schools Analysis\n",
     "\n",
-    "- Your analysis here\n",
+    "There is a discernable difference in school performance within the district. It appears that contrasts amongst schools can be drawn based on several factors, namely:\n",
+    "(1) school budget\n",
+    "(2) per capita budget\n",
+    "(3) students per school\n",
+    "(4) test scores in Math and Reading.\n",
+    "\n",
+    "The data generated below allow for certain conclusions to be drawn and can ultimately be the underlying logic to make future district level decisions.\n",
+    "\n",
+    "Conclusions:\n",
+    "\n",
+    "- Charter schools are achieving higher test scores and larger segments of students passing than District schools, while consuming less budget at the school level and per capita level\n",
+    "\n",
+    "- Schools with less than 2000 students, defined by two categories, Small (<1000 students) and Medium (1000-2000 students), having substantially higher passing rates for (1) Math, (2) Reading, and (3) Math + Reading\n",
     "  \n",
     "---"
    ]
@@ -338,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 141,
    "metadata": {},
    "outputs": [
     {
@@ -347,7 +359,7 @@
        "65.17232575950983"
       ]
      },
-     "execution_count": 109,
+     "execution_count": 141,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -363,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 142,
    "metadata": {},
    "outputs": [
     {
@@ -427,7 +439,7 @@
        "0                                          65.17%  "
       ]
      },
-     "execution_count": 110,
+     "execution_count": 142,
      "metadata": {},
      "output_type": "execute_result"
     }
