last second changes

--- a/PyCitySchools/PyCitySchools_Roop.ipynb
+++ b/PyCitySchools/PyCitySchools_Roop.ipynb
@@ -8,9 +8,9 @@
     "# PyCity Schools Analysis\n",
     "\n",
     "There is a discernable difference in school performance within the district. It appears that contrasts amongst schools can be drawn based on several factors, namely:\n",
-    "(1) school budget\n",
-    "(2) per capita budget\n",
-    "(3) students per school\n",
+    "(1) school budget,\n",
+    "(2) per capita budget,\n",
+    "(3) students per school, and\n",
     "(4) test scores in Math and Reading.\n",
     "\n",
     "The data generated below allow for certain conclusions to be drawn and can ultimately be the underlying logic to make future district level decisions.\n",
